--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yahtzee",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://christianhubbard.github.io/yahtzee",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -11,12 +12,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.13.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5"
+    "enzyme-to-json": "^3.3.5",
+    "gh-pages": "^3.1.0"
   }
 }
